# cugo-navigation2

./: README.md
cugo_ws/automove/: square_move.py
cugo_ws/install/: local_setup.sh  setup.sh
cugo_ws/install/cugo_ros2_control2/share/cugo_ros2_control2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
cugo_ws/install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
cugo_ws/install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
slam_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
slam_ws/install/fast_lio/share/fast_lio/: package.sh
slam_ws/install/livox_carto/share/livox_carto/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
slam_ws/src/livox_carto/: package.xml  setup.cfg  setup.py
slam_ws/src/livox_carto/config/: carto.lua  qos_overrides.yaml
slam_ws/src/livox_carto/launch/: carto_all_in_one.launch.py
